Add Product Catalog API (#28)
* Add Product Catalog API

`/categories`
`/products?category=<a-category>`

Add categories and products API lambdas serving product catalog information through an ApiGateway.
Break the product-catalog into parts:
  1. builder (previous assets moved to this sub-folder)
    a. use new 'productCatalogBuilder' moniker (no other changes of substance)
  2. api (all new assets in an 'api' sub-folder)(new moniker 'productCatalogApi')
Implement two lambdas to cover the API requests:
  0. implemented in catalogApi.js with:
    a. request schemas
    b. items collection schemas
  1. For both:
    a. categories
    b. products

Update build to hit both new projects
Update the README

* Improve Scraper Code (#29)

Add use of proxy to scraper code reading from n.com (when config is provided - i.e. not in lambda)
Update log group name to reflect lambda name (so logs can be written)
Check for a SLS_ROOT env var and if it is defined attempt to use it to load a custom local SLS version (add debug messaging)
Auto-publish private.yml config to the appropriate environment variables
Add `secureEndpoint = true` to the proxy configuration (when used)
Use the private.yml's stage declaration when invoking the scraper locally

--- a/product-creation/lambda/serverless.yml
+++ b/product-creation/lambda/serverless.yml
@@ -36,7 +36,7 @@ resources:
     ProductServiceLogGroup:
       Type: AWS::Logs::LogGroup
       Properties:
-        LogGroupName: "/aws/lambda/${self:custom.stage}-${self:service}-newProductSimulator"
+        LogGroupName: "/aws/lambda/${self:custom.stage}-${self:service}-scrapeProducts"
     ProductStreamProducer: # role for producing test products
       Type: AWS::IAM::Role
       Properties:
