--- a/buildspec.yml
+++ b/buildspec.yml
@@ -22,7 +22,9 @@ phases:
       - chmod 700 $CODEBUILD_SRC_DIR/build/1.install.sh
       - $CODEBUILD_SRC_DIR/build/1.install.sh "Installing Top-Level Project Dependencies"     $CODEBUILD_SRC_DIR
       - $CODEBUILD_SRC_DIR/build/1.install.sh "Installing New Product Simulator Dependencies" $CODEBUILD_SRC_DIR/product-creation/lambda
-      - $CODEBUILD_SRC_DIR/build/1.install.sh "Installing Product Catalog Dependencies"       $CODEBUILD_SRC_DIR/product-catalog
+      # Product Catalog
+      - $CODEBUILD_SRC_DIR/build/1.install.sh "Installing Product Catalog Dependencies"       $CODEBUILD_SRC_DIR/product-catalog/builder
+      - $CODEBUILD_SRC_DIR/build/1.install.sh "Installing Product Catalog API"                $CODEBUILD_SRC_DIR/product-catalog/api
   build:
     commands:
       - npm run test
@@ -30,4 +32,6 @@ phases:
       - chmod 700 $CODEBUILD_SRC_DIR/build/2.deploy.sh
       - $CODEBUILD_SRC_DIR/build/2.deploy.sh "Deploying Retail Stream"              $CODEBUILD_SRC_DIR/retail-stream
       - $CODEBUILD_SRC_DIR/build/2.deploy.sh "Deploying New Products Simulator"     $CODEBUILD_SRC_DIR/product-creation/lambda
-      - $CODEBUILD_SRC_DIR/build/2.deploy.sh "Deploying Product Catalog Processor"  $CODEBUILD_SRC_DIR/product-catalog
+      # Product Catalog
+      - $CODEBUILD_SRC_DIR/build/2.deploy.sh "Deploying Product Catalog Processor"  $CODEBUILD_SRC_DIR/product-catalog/builder
+      - $CODEBUILD_SRC_DIR/build/2.deploy.sh "Deploying Product Catalog API"        $CODEBUILD_SRC_DIR/product-catalog/api
