--- a/product-catalog/api/package.json
+++ b/product-catalog/api/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "hello-retail-product-catalog",
+  "name": "hello-retail-product-catalog-api",
   "version": "0.0.1",
-  "description": "A stream processor that accumulates a catalog of our latest best knowledge regarding each product",
-  "main": "index.js",
+  "description": "An API to obtain product and category information from the Product Catalog",
+  "main": "catalogApi.js",
   "scripts": {
     "test": "echo \"Error: tests executed by root hello-retail package.json\" && exit 1"
   },
