--- a/product-catalog/builder/serverless.yml
+++ b/product-catalog/builder/serverless.yml
@@ -1,24 +1,24 @@
 frameworkVersion: '>=1.0.0 <2.0.0'
 
-service: ${self:custom.helloRetail.name}-product-catalog
+service: ${self:custom.helloRetail.name}-product-catalog-builder
 
 custom:
   stage: ${opt:stage, self:provider.stage, self:custom.private.stage}
-  private: ${file(../private.yml)}
-  helloRetail: ${file(../helloRetail.yml)}
-  retailStream: ${file(../retail-stream/serverless.yml)}
+  private: ${file(../../private.yml)}
+  helloRetail: ${file(../../helloRetail.yml)}
+  retailStream: ${file(../../retail-stream/serverless.yml)}
   retailStreamVersion: 1
   # Product Catalog Versions & Exports
-  # WARNING: each project that uses these will have to define the following two attributes (custom.productCatalogVersion, custom.productCatalog) in its serverless.yml:
-  productCatalogVersion: 1 # The version of this service to depend upon
-  productCatalog: ${self:} # externally, use `${file(~/product-catalog/serverless.yml)}`, replacing the `~` therein with the appropriate relative reference [e.g. '..' or '../..']
+  # WARNING: each project that uses these will have to define the following two attributes (custom.productCatalogBuilderVersion, custom.productCatalogBuilder) in its serverless.yml:
+  productCatalogBuilderVersion: 1 # The version of this service to depend upon
+  productCatalogBuilder: ${self:} # externally, use `${file(~/product-catalog/serverless.yml)}`, replacing the `~` therein with the appropriate relative reference [e.g. '..' or '../..']
   # Exports
-  exportProductCategoryTableName: ${self:custom.productCatalog.service}:${self:custom.stage}:ProductCategoryTableName:${self:custom.productCatalogVersion}
-  exportProductCategoryTableArn: ${self:custom.productCatalog.service}:${self:custom.stage}:ProductCategoryTableArn:${self:custom.productCatalogVersion}
-  exportProductCatalogTableName: ${self:custom.productCatalog.service}:${self:custom.stage}:ProductCatalogTableName:${self:custom.productCatalogVersion}
-  exportProductCatalogTableArn: ${self:custom.productCatalog.service}:${self:custom.stage}:ProductCatalogTableArn:${self:custom.productCatalogVersion}
-  exportProductCatalogTableCategoryIndexArn: ${self:custom.productCatalog.service}:${self:custom.stage}:ProductCatalogTableCategoryIndexArn:${self:custom.productCatalogVersion}
-  exportProductCatalogReaderArn: ${self:custom.productCatalog.service}:${self:custom.stage}:ProductCatalogReaderArn:${self:custom.productCatalogVersion}
+  exportProductCategoryTableName: ${self:custom.productCatalogBuilder.service}:${self:custom.stage}:ProductCategoryTableName:${self:custom.productCatalogBuilderVersion}
+  exportProductCategoryTableArn: ${self:custom.productCatalogBuilder.service}:${self:custom.stage}:ProductCategoryTableArn:${self:custom.productCatalogBuilderVersion}
+  exportProductCatalogTableName: ${self:custom.productCatalogBuilder.service}:${self:custom.stage}:ProductCatalogTableName:${self:custom.productCatalogBuilderVersion}
+  exportProductCatalogTableArn: ${self:custom.productCatalogBuilder.service}:${self:custom.stage}:ProductCatalogTableArn:${self:custom.productCatalogBuilderVersion}
+  exportProductCatalogTableCategoryIndexArn: ${self:custom.productCatalogBuilder.service}:${self:custom.stage}:ProductCatalogTableCategoryIndexArn:${self:custom.productCatalogBuilderVersion}
+  exportProductCatalogReaderArn: ${self:custom.productCatalogBuilder.service}:${self:custom.stage}:ProductCatalogReaderArn:${self:custom.productCatalogBuilderVersion}
 
 provider:
   name: aws
@@ -70,7 +70,7 @@ resources:
         ProvisionedThroughput:
           ReadCapacityUnits: 1
           WriteCapacityUnits: 1
-        TableName: '${self:custom.stage}-ProductCategory-${self:custom.productCatalogVersion}'
+        TableName: ${self:custom.stage}-ProductCategory-${self:custom.productCatalogBuilderVersion}
     ProductCatalog:
       Type: 'AWS::DynamoDB::Table'
       Properties:
@@ -87,7 +87,7 @@ resources:
         ProvisionedThroughput:
           ReadCapacityUnits: 1
           WriteCapacityUnits: 1
-        TableName: '${self:custom.stage}-ProductCatalog-${self:custom.productCatalogVersion}'
+        TableName: ${self:custom.stage}-ProductCatalog-${self:custom.productCatalogBuilderVersion}
         GlobalSecondaryIndexes:
           - IndexName: Category
             KeySchema:
@@ -131,6 +131,11 @@ resources:
                 - Effect: 'Allow'
                   Action:
                     - 'logs:CreateLogStream'
+                  Resource:
+                    Fn::Join:
+                      Fn::GetAtt: [ CatalogLogGroup, Arn ]
+                - Effect: 'Allow'
+                  Action:
                     - 'logs:PutLogEvents'
                   Resource:
                     Fn::Join:
@@ -173,15 +178,15 @@ resources:
       Type: AWS::IAM::Role
       Properties:
         Path: /
-        RoleName: ${self:custom.stage}ProductCatalogReader
+        RoleName: ${self:custom.stage}ProductCatalogReader${self:custom.productCatalogBuilderVersion}
         AssumeRolePolicyDocument:
           Version: '2012-10-17'
           Statement:
             - Effect: Allow
+              Action: sts:AssumeRole
               Principal:
                 AWS: # role ARNs that are allowed to read from the Product Catalog
                   - 'arn:aws:iam::${self:custom.private.accountId}:role/${self:custom.private.teamRole}'
-              Action: sts:AssumeRole
         ManagedPolicyArns:
           - ${self:custom.private.teamPolicy}
         Policies:
@@ -218,13 +223,13 @@ resources:
                         - Category
   Outputs:
     ProductCategoryTableName:
-      Description: The Name of the Product Catalog Table
+      Description: The Name of the Product Category Table
       Value:
         Ref: ProductCategory
       Export:
         Name: ${self:custom.exportProductCategoryTableName}
     ProductCategoryTableArn:
-      Description: The ARN for the Product Catalog Table
+      Description: The ARN for the Product Category Table
       Value:
         Fn::Join:
           - '/'
