--- a/retail-stream/serverless.yml
+++ b/retail-stream/serverless.yml
@@ -45,7 +45,9 @@ resources:
               Principal:
                 AWS: # role ARNs that are allowed to write to the Retail stream
                   - 'arn:aws:iam::${self:custom.private.accountId}:role/${self:custom.private.teamRole}'
-                  - '${self:custom.private.productProvider}'
+                  #- '${self:custom.private.productProvider}'
+                  #TODO: Properly reference
+                  - 'arn:aws:iam::${self:custom.private.accountId}:role/${self:custom.stage}-${self:custom.helloRetail.name}-product-creation-newProductSimulator'
               Action: sts:AssumeRole
         ManagedPolicyArns:
           - ${self:custom.private.teamPolicy}
