--- a/web/serverless.yml
+++ b/web/serverless.yml
@@ -1,6 +1,9 @@
 frameworkVersion: '>=1.0.0 <2.0.0'
 
-service: hello-retail-website
+service: ${self:custom.helloRetail.name}-web-app
+
+plugins:
+  - web-app-build-plugin
 
 custom:
   # AWS ARN for the S3 bucket used to host the site.
@@ -10,6 +13,8 @@ custom:
       - - 'arn:aws:s3:::'
         - Ref: HelloRetailWebBucket
         - '/*'
+
+  oAuthClientId: amzn1.application-oa2-client.d38cc5e49f9343b5b7a718f9d21fc93a
 
   # Domain name for CloudFront distribution.
   cloudFrontDomainName:
@@ -50,11 +55,46 @@ custom:
   # Import secrets.
   private: ${file(../private.yml)}
 
+  helloRetail: ${file(../helloRetail.yml)}
+
+  # TODO: Import necessary dependencies
+  retailStreamVersion: 1
+  retailStream: ${file(../retail-stream/serverless.yml)}
+  productCatalogVersion: 1
+  productCatalog: ${file(../product-catalog/serverless.yml)}
+
+  s3Bucket:
+    Fn::Join: # e.g. s3://stage.hello-retail.biz/
+      - ''
+      - - 's3://'
+        - Ref: HelloRetailWebBucket
+        - '/'
+
   # SSL Certificate to use for Cloud Front.
   sslCert: ${self:custom.private.websiteSSLCert}
 
   # Stage name for deployment. Use 'prod' to deploy to production.
   stage: ${opt:stage, self:provider.stage, self:custom.private.stage}
+
+  # TODO: Reference values from dependencies above when possible
+  webAppBuild:
+    configPath: ./config.js
+    configValues:
+      WebAppName: Hello Retail
+      Stage: ${self:custom.stage}
+      CatalogReaderRole: arn:aws:iam::${self:custom.private.accountId}:role/${self:custom.stage}ProductCatalogReader
+      AuthClientId: ${self:custom.oAuthClientId}
+      AWSRegion: ${self:custom.private.region}
+      SessionName: ${self:custom.helloRetail.name}-web-app-${self:custom.stage}
+      # TODO: Create this role as part of this stack
+      WebAppRole: arn:aws:iam::${self:custom.private.accountId}:role/${self:custom.stage}HelloRetailWebIdentity
+      ProductCatalogTableName: ${self:custom.stage}-ProductCatalog-${self:custom.productCatalogVersion}
+      ProductCategoryTableName: ${self:custom.stage}-ProductCategory-${self:custom.productCatalogVersion}
+    webpackPath: ./webpack.config.js
+
+  webApp: ${self:} # externally, use `${file(~/web/serverless.yml)}`, replacing the `~` therein with the appropriate relative reference [e.g. '..' or '../..']
+  exportWebApplicationIdentityArn: ${self:custom.webApp.service}:${self:custom.stage}:WebApplicationIdentityArn
+  exportWebApplicationBucketName: ${self:custom.webApp.service}:${self:custom.stage}:WebApplicationBucketName
 
 provider:
   name: aws
@@ -70,6 +110,39 @@ resources:
          - prod
 
   Resources:
+
+    # TODO: Web App Role to include policy allowing it to assume all necessary roles
+
+    # ===================== IAM ====================
+
+    WebApplicationIdentity:
+      Type: AWS::IAM::Role
+      Properties:
+        Path: /
+        RoleName: ${self:custom.stage}HelloRetailWebIdentity
+        AssumeRolePolicyDocument:
+          Version: '2012-10-17'
+          Statement:
+            - Effect: Allow
+              Principal:
+                Federated: www.amazon.com
+              Action: sts:AssumeRoleWithWebIdentity
+              Condition:
+                StringEquals:
+                  www.amazon.com:app_id: ${self:custom.oAuthClientId}
+        ManagedPolicyArns:
+          - ${self:custom.private.teamPolicy}
+        Policies:
+          - PolicyName: AllowAssumeProductCatalogReader
+            PolicyDocument:
+              Version: '2012-10-17'
+              Statement:
+                - Effect: Allow
+                  Action:
+                    - sts:AssumeRole
+                  Resource:
+                    # TODO: use imported values
+                    - arn:aws:iam::${self:custom.private.accountId}:role/${self:custom.stage}ProductCatalogReader
 
     # ===================== S3 =====================
 
@@ -93,6 +166,13 @@ resources:
               Effect: Allow
               Resource: ${self:custom.bucketArn}
               Principal: '*'
+            - Action:
+                - s3:PutObject
+              Effect: Allow
+              Resource: ${self:custom.bucketArn}
+              Principal:
+                AWS:
+                  - 'arn:aws:iam::${self:custom.private.accountId}:role/${self:custom.stage}HelloRetailWebIdentity'
       DependsOn:
         - HelloRetailWebBucket
 
@@ -149,3 +229,19 @@ resources:
             HostedZoneId: ${self:custom.cloudFrontHostedZoneId}
       DependsOn:
         - HelloRetailWebDistribution
+
+  # ================= Outputs ===================
+
+  Outputs:
+    WebApplicationIdentityArn:
+      Description: The Role ARN for the Web Application identity
+      Value:
+        Fn::GetAtt: [ WebApplicationIdentity, Arn ]
+      Export:
+        Name: ${self:custom.exportWebApplicationIdentityArn}
+    WebApplicationBucketName:
+      Description: The S3 Bucket ARN used to host Web Application
+      Value:
+        Ref: HelloRetailWebBucket
+      Export:
+        Name: ${self:custom.exportWebApplicationBucketName}
