Adds some BASH scripts to write events to the Retail Stream

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "./node_modules/.bin/mocha --recursive -R min ./**/*.spec.js",
-    "lint": "./node_modules/.bin/eslint ./**/*.js ./**/*.jsx",
+    "lint": "./node_modules/.bin/eslint --fix ./**/*.js ./**/*.jsx",
     "sim:scrape": "node ./product-creation/test/scrape-products-exec.js",
     "web:build": "./node_modules/.bin/webpack --config ./web/webpack.config.js",
     "web:dev:hot": "./node_modules/.bin/webpack-dev-server --config ./web/webpack.config.js --hot --inline --progress --colors --watch --display-error-details --display-cached --content-base ./web/"
